--- a/board/board.css
+++ b/board/board.css
@@ -43,12 +43,12 @@
 
 
 /* Styles spécifiques pour les couleurs */
-.red { background-color: red; }
-.blue { background-color: blue; }
-.green { background-color: green; }
-.yellow { background-color: rgb(255, 238, 0); }
-.orange { background-color: orange; }
-.black { background-color: black; }
+.red { background-color: var(--red-color); }
+.blue { background-color: var(--blue-color);  }
+.green { background-color: var(--green-color); }
+.yellow { background-color: var(--yellow-color); }
+.orange { background-color: var(--orange-color); }
+.black { background-color: var(--black-color); }
 
 /* Le centre du plateau */
 #center-piece {
