--- a/common/styles.css
+++ b/common/styles.css
@@ -7,3 +7,11 @@
     --black-color: black;
   }
   
+
+/* Styles spécifiques pour les couleurs */
+.red { background-color: var(--red-color); }
+.blue { background-color: var(--blue-color);  }
+.green { background-color: var(--green-color); }
+.yellow { background-color: var(--yellow-color); }
+.orange { background-color: var(--orange-color); }
+.black { background-color: var(--black-color); }
