--- a/card/styles.css
+++ b/card/styles.css
@@ -1,19 +1,55 @@
-#container {
+.container {
   text-align: center;
   margin-top: 50px;
 }
 
-#card {
-  width: 300px;
-  border: 2px solid black;
-  border-radius: 2px;
-  padding: 20px;
+/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+.flip-card {
   margin: 0 auto;
-  display: flex;
-  flex-direction: column;
+  background-color: transparent;
+  width: 300px;
+  height: 400px;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
 }
 
-.Title {
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  border: 2px solid black;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* CSS qui contrôle le retournement, déclenché par une classe */
+.flip-card-inner.is-flipped {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  background-color: #f8f8f8;
+}
+
+/* Style the back side */
+.flip-card-back {
+  background-color: #f8f8f8;
+  transform: rotateY(180deg);
+} 
+
+
+.title {
   font-size: xx-large;
   display: flex;
   justify-content: space-around;
@@ -27,6 +63,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 15px;
+  margin: 15px;
   padding: 10px 5px;
   border-radius: 2px;
 }
@@ -36,25 +73,4 @@
   margin-left: 5px;
   font-weight: 700;
   transition: filter 0.5s ease; /* Ajoute une transition pour une animation fluide */
-}
-
-.blur {
-  filter: blur(5px); /* Applique un flou */
-}
-
-.mask-text {
-  /* Cache le texte d'origine */
-  color: transparent;
-  text-shadow: 0 0 0 #000;
-  font-size: 0;
-
-  /* Ajoute les astérisques via le contenu généré */
-  &:after {
-    content: "******************";
-    font-size: 16px; /* Adaptez la taille de la police au besoin */
-    color: black; /* Couleur des astérisques */
-  }
-}
-
-button {
 }
