--- a/card/styles.css
+++ b/card/styles.css
@@ -1,3 +1,9 @@
+
+:root {
+  --marge: 30px;
+  --cornerSize: calc(var(--marge));
+  --sizeMinusCorner: calc(100% - var(--cornerSize));
+}
 .container {
   text-align: center;
   margin-top: 50px;
@@ -21,6 +27,7 @@
   text-align: center;
   transition: transform 0.8s;
   transform-style: preserve-3d;
+  border-radius: 1%;
 }
 
 /* CSS qui contrôle le retournement, déclenché par une classe */
@@ -39,13 +46,17 @@
 
 /* Style the front side (fallback if image is missing) */
 .flip-card-front {
+  border-radius: inherit;
   background-color: #f8f8f8;
 }
 
 /* Style the back side */
 .flip-card-back {
+  border-radius: inherit;
   background-color: #f8f8f8;
   transform: rotateY(180deg);
+  padding: var(--marge); /* Marge intérieure pour pousser l'enfant */
+  box-sizing: border-box; /* S'assurer que le padding est inclus dans la largeur/hauteur */
 } 
 
 
@@ -55,7 +66,6 @@
   justify-content: space-around;
   margin-bottom: 15px;
   padding: 15px;
-  border-radius: 2px;
 }
 
 .category {
@@ -65,7 +75,7 @@
   margin-bottom: 15px;
   margin: 15px;
   padding: 10px 5px;
-  border-radius: 2px;
+  border-radius: 1%;
 }
 
 .category-content {
@@ -74,3 +84,50 @@
   font-weight: 700;
   transition: filter 0.5s ease; /* Ajoute une transition pour une animation fluide */
 }
+
+.custom-shape { 
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background-color: black;
+  clip-path: polygon(
+    var(--cornerSize) 0%, 
+    var(--cornerSize) var(--cornerSize), 
+    0% var(--cornerSize),  
+    0% var(--sizeMinusCorner), 
+    var(--cornerSize) var(--sizeMinusCorner), 
+    var(--cornerSize) 100%,  
+    var(--sizeMinusCorner) 100%, 
+    var(--sizeMinusCorner) var(--sizeMinusCorner), 
+    100% var(--sizeMinusCorner), 
+    100% var(--cornerSize), 
+    var(--sizeMinusCorner) var(--cornerSize), 
+    var(--sizeMinusCorner) 0%
+  ); 
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
+}
+
+.custom-shape::after { 
+  content: ""; 
+  width: calc(100% - 5px);
+  height: calc(100% - 5px);
+  position: absolute; 
+  background-color: #f8f8f8; 
+  
+  clip-path: polygon(
+    var(--cornerSize) 0%, 
+    var(--cornerSize) var(--cornerSize), 
+    0% var(--cornerSize),  
+    0% var(--sizeMinusCorner), 
+    var(--cornerSize) var(--sizeMinusCorner), 
+    var(--cornerSize) 100%,  
+    var(--sizeMinusCorner) 100%, 
+    var(--sizeMinusCorner) var(--sizeMinusCorner), 
+    100% var(--sizeMinusCorner), 
+    100% var(--cornerSize), 
+    var(--sizeMinusCorner) var(--cornerSize), 
+    var(--sizeMinusCorner) 0%
+  ); 
+} 
