--- a/card/styles.css
+++ b/card/styles.css
@@ -25,7 +25,7 @@
   width: 100%;
   height: 100%;
   text-align: center;
-  transition: transform 0.8s;
+  transition: transform 1s;
   transform-style: preserve-3d;
   border-radius: 1%;
 }
@@ -48,6 +48,7 @@
 .flip-card-front {
   border-radius: inherit;
   background-color: #f8f8f8;
+  text-align: center;
 }
 
 /* Style the back side */
@@ -66,10 +67,15 @@
 
 .title {
   font-size: xx-large;
-  display: flex;
-  justify-content: space-around;
-  margin-bottom: 15px;
-  padding: 15px;
+  margin-top: 25px;
+  margin-bottom: 50px;
+  margin-left: 25px;
+  margin-right: 20px;
+  letter-spacing: calc(5px);
+  font-stretch:ultra-expanded; /* Augmente la hauteur des lettres */
+  text-decoration: underline; /* Ajoute une ligne sous le mot */
+  text-decoration-thickness: 7px; /* Épaissit la ligne */
+  text-underline-offset: 10px; /* Décale la ligne vers le bas de 3 pixels */
 }
 
 .category {
