--- a/common/styles.css
+++ b/common/styles.css
@@ -17,7 +17,9 @@
 .black { background-color: var(--black-color); }
 
 .button-container {
-  text-align: center;
+  text-align: left;
+  height: 300px;
+  width: 300px;
 }
 
 button {
