--- a/board/player.css
+++ b/board/player.css
@@ -1,4 +1,15 @@
 
+:root{
+  --player-0-color-light: var(--color-grapefruit); 
+  --player-0-color-dark: var(--color-grapefruit-dark);
+  --player-1-color-light: var(--color-mint);
+  --player-1-color-dark: var(--color-mint-dark);
+  --player-2-color-light: var(--color-pink-rose);
+  --player-2-color-dark: var(--color-pink-rose-dark);
+  --player-3-color-light: var(--color-blue-jeans);
+  --player-3-color-dark: var(--color-blue-jeans-dark);
+}
+
 .player {
     position: absolute;
     width: 20px;
@@ -9,31 +20,51 @@
     font-size: 12px;
     color: black;
     border-radius: 50%;
-    border: 1px solid black; /* Juste pour visualiser les cases */
+    /*border: 1px solid black; /* Juste pour visualiser les cases */
+
+    
+    display: inline-block;
+    margin: 1px;
+    border: 2px solid #333;
+    cursor: pointer;
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
   }
   
-  .player-0 {
+  .player-0-pos {
     top: 0;
     left: 0;
-    background-color: blueviolet; /* Pour une meilleure visibilité */
+  }
+
+  .player-0-color {
+    background-image: linear-gradient(135deg, var(--player-0-color-light), var(--player-0-color-dark));
   }
   
-  .player-1 {
+  .player-1-pos {
     top: 0;
     right: 0;
-    background-color: cyan; /* Pour une meilleure visibilité */
+  }
+
+  .player-1-color {
+    background-image: linear-gradient(135deg, var(--player-1-color-light), var(--player-1-color-dark));
   }
   
-  .player-2 {
+  .player-2-pos {
     bottom: 0;
     left: 0;
-    background-color: pink; /* Pour une meilleure visibilité */
+  }
+
+  .player-2-color {
+    background-image: linear-gradient(135deg, var(--player-2-color-light), var(--player-2-color-dark));
   }
   
-  .player-3 {
+  .player-3-pos {
     bottom: 0;
     right: 0;
-    background-color: red; /* Pour une meilleure visibilité */
+  }
+
+  .player-3-color {
+    background-image: linear-gradient(135deg, var(--player-3-color-light), var(--player-3-color-dark));
   }
   
   
