--- a/board/dice.css
+++ b/board/dice.css
@@ -4,95 +4,74 @@
   --dice-dot-color: var(--color-dark-gray-dark);
 }
 
-.face-1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .dice {
-    padding: calc(var(--square-size) * 0.08);
-    background-color: var(--dice-background-color);
-    
-    width: calc(var(--square-size) * 0.8 - 4px);
-    height: calc(var(--square-size) * 0.8 - 4px);
-    border-radius: 10%;
-    margin-right : 0px;
-    
-    border: 2px solid var(--dice-border-color); /* Juste pour visualiser les cases */
-  }
-  .dot{
-    display: block;
-    width: calc(var(--square-size) / 4);
-    height: calc(var(--square-size) / 4);
-    border-radius: 50%;
-    background-color: var(--dice-dot-color);
-  }
+.dice {
+  padding: calc(var(--square-size) * 0.08);
+  background-color: var(--dice-background-color);
   
-  .face-2{
-    display: flex ;
-    justify-content: space-between;
-  }
+  width: calc(var(--square-size) * 0.8 - 4px);
+  height: calc(var(--square-size) * 0.8 - 4px);
+  border-radius: 10%;
+  margin-right : 0px;
   
-  .face-2 .dot:nth-of-type(2) {
-    align-self: flex-end;
-  }
-  
-  .face-3 {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .face-3 .dot:nth-of-type(1) {
-    align-self :flex-end;
-  }
-  
-  .face-3 .dot:nth-of-type(2) {
-    align-self :center;
-  }
-  
-  
-  .face-4 , .face-6, .face-5{
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .face-4 .column , .face-6 .column, .face-5 .column{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  
-  .face-5 .column:nth-of-type(2) {
-    justify-content: center;
-  }
-  
-  
-  .face-1{
-    display: none ;
-  }
-  
-  .face-2{
-    display: none ;
-  }
-  
-  .face-3{
-    display: none ;
-  }
-  
-  .face-4{
-    display: none ;
-  }
-  
-  .face-5{
-    display: none ;
-  }
-  
-  .face-6{
-    display: none ;
-  }
+  border: 2px solid var(--dice-border-color); /* Juste pour visualiser les cases */
+}
 
-  
+.dot{
+  display: block;
+  width: calc(var(--square-size) / 4);
+  height: calc(var(--square-size) / 4);
+  border-radius: 50%;
+  background-color: var(--dice-dot-color);
+}
+
+.face-1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.face-2{
+  display: flex ;
+  justify-content: space-between;
+}
+
+.face-2 .dot:nth-of-type(2) {
+  align-self: flex-end;
+}
+
+.face-3 {
+  display: flex;
+  justify-content: space-between;
+}
+
+.face-3 .dot:nth-of-type(1) {
+  align-self :flex-end;
+}
+
+.face-3 .dot:nth-of-type(2) {
+  align-self :center;
+}
+
+.face-4 , .face-6, .face-5{
+  display: flex;
+  justify-content: space-between;
+}
+
+.face-4 .column , .face-6 .column, .face-5 .column{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.face-5 .column:nth-of-type(2) {
+  justify-content: center;
+}
+
+.face {
+  display: none ;
+}
+
 #dice {
-    grid-column: 9;
-    grid-row: 9;
-  }
+  grid-column: 9;
+  grid-row: 9;
+}
