--- a/board/dice.css
+++ b/board/dice.css
@@ -14,6 +14,7 @@
   margin-right : 0px;
   
   border: 2px solid var(--dice-border-color); /* Juste pour visualiser les cases */
+  cursor: pointer;
 }
 
 .dot{
