--- a/board/board.css
+++ b/board/board.css
@@ -1,4 +1,3 @@
-
 :root {
   --square-size: 55px;
   --square-border-size: 2px;
@@ -6,13 +5,13 @@
   --medium-font-size: calc(var(--square-size) / 4);
   --small-font-size: calc(var(--square-size) / 6);
 }
-body{
-  background-color:rgb(0,0,0);
-  background-image:url(http://www.zingerbugimages.com/backgrounds/white_marble_background_seamless.jpg);
-  background-position:top left;
-  background-repeat:repeat;
-  background-attachment:fixed;
-  
+body {
+  background-color: rgb(0, 0, 0);
+  background-image: url(http://www.zingerbugimages.com/backgrounds/white_marble_background_seamless.jpg);
+  background-position: top left;
+  background-repeat: repeat;
+  background-attachment: fixed;
+
   display: flex;
   align-items: baseline;
 }
@@ -62,7 +61,6 @@ body{
   color: black;
   border: 1px solid white; /* Juste pour visualiser les cases */
 }
-
 
 /* Le centre du plateau */
 #center-piece {
