--- a/board/player.css
+++ b/board/player.css
@@ -1,6 +1,5 @@
-
-:root{
-  --player-0-color-light: var(--color-grapefruit); 
+:root {
+  --player-0-color-light: var(--color-grapefruit);
   --player-0-color-dark: var(--color-grapefruit-dark);
   --player-1-color-light: var(--color-mint);
   --player-1-color-dark: var(--color-mint-dark);
@@ -11,60 +10,73 @@
 }
 
 .player {
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 12px;
-    color: black;
-    border-radius: 50%;
-    /*border: 1px solid black; /* Juste pour visualiser les cases */
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  color: black;
+  border-radius: 50%;
+  /*border: 1px solid black; /* Juste pour visualiser les cases */
 
-    
-    display: inline-block;
-    margin: 1px;
-    border: 2px solid #333;
-    cursor: pointer;
-    border-radius: 5px;
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
-  }
-  
-  .player-0-pos {
-    top: 0;
-    left: 0;
-  }
+  display: inline-block;
+  margin: 1px;
+  border: 2px solid #333;
+  cursor: pointer;
+  border-radius: 5px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+}
 
-  .player-0-color {
-    background-image: linear-gradient(135deg, var(--player-0-color-light), var(--player-0-color-dark));
-  }
-  
-  .player-1-pos {
-    top: 0;
-    right: 0;
-  }
+.player-0-pos {
+  top: 0;
+  left: 0;
+}
 
-  .player-1-color {
-    background-image: linear-gradient(135deg, var(--player-1-color-light), var(--player-1-color-dark));
-  }
-  
-  .player-2-pos {
-    bottom: 0;
-    left: 0;
-  }
+.player-0-color {
+  background-image: linear-gradient(
+    135deg,
+    var(--player-0-color-light),
+    var(--player-0-color-dark)
+  );
+}
 
-  .player-2-color {
-    background-image: linear-gradient(135deg, var(--player-2-color-light), var(--player-2-color-dark));
-  }
-  
-  .player-3-pos {
-    bottom: 0;
-    right: 0;
-  }
+.player-1-pos {
+  top: 0;
+  right: 0;
+}
 
-  .player-3-color {
-    background-image: linear-gradient(135deg, var(--player-3-color-light), var(--player-3-color-dark));
-  }
-  
-  
+.player-1-color {
+  background-image: linear-gradient(
+    135deg,
+    var(--player-1-color-light),
+    var(--player-1-color-dark)
+  );
+}
+
+.player-2-pos {
+  bottom: 0;
+  left: 0;
+}
+
+.player-2-color {
+  background-image: linear-gradient(
+    135deg,
+    var(--player-2-color-light),
+    var(--player-2-color-dark)
+  );
+}
+
+.player-3-pos {
+  bottom: 0;
+  right: 0;
+}
+
+.player-3-color {
+  background-image: linear-gradient(
+    135deg,
+    var(--player-3-color-light),
+    var(--player-3-color-dark)
+  );
+}
